<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@null"
        android:src="@drawable/ead" />

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pilih_menu"
            android:textStyle="bold"/>

        <RadioButton
            android:id="@+id/rb_dinein"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dine_in"/>

        <RadioButton
            android:id="@+id/rb_takeaway"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_away"/>
    </RadioGroup>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_pesan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pesan_sekarang" />
</LinearLayout>